[tool.poetry]
name = "sid_provision"
version = "0.2.3"
description = "Tool generate mfg pages"
authors = ["Sidewalk Team <sidewalk-provisioning@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
intelhex = "^2.3.0"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
black = "^24.3"
flake8 = "^4.0.1"
mypy = "^0.982"
types-PyYAML = "^6.0.12"
hexdump = "^3.3"

[tool.poetry.scripts]
sid_provision = "sid_provision.run:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
